# -QCM-Briac_Dorian

./: Answer.cpp  Answer.h  CMakeLists.txt  QCM.cpp  QCM.h  QCM.txt  QCMManager.cpp  QCMManager.h  QCMforms.h  Question.cpp  Question.h  README.md  main.cpp  text.c
QCM/: OURS.qcm  QCM.qcm
dirent/: dirent.cpp  dirent.md
model/: CMakeLists.txt  QCM.cpp  QCM.h  QCMForm.cpp  QCMForm.h  QCMManager.cpp  QCMManager.h  QCMfille.cpp  QCMfille.h  Question.cpp  Question.h
